# agent-harness

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README-observability.md  README.md  ROADMAP.md  Roadmap.md  guide.md  harness-cli  lessons.json  pyproject.toml
.github/: copilot-instructions.md  copilot-quick-prompts.md
.github/chatmodes/: harness-builder.chatmode.md
.github/prompts/: harness-builder.prompt.md
examples/load_generator/: __init__.py  __main__.py
examples/summarizer/: __main__.py
harness/: __init__.py  alerting.py  async_support.py  cli.py  health.py  ui.py
harness/base/: __init__.py  agent.py  base_agent.py  config.py
harness/config/: __init__.py  settings.py
harness/feedback/: __init__.py  failure_logger.py  lessons.py  lessons_store.py
harness/observability/: __init__.py  logger.py  logging.py
harness/reliability/: __init__.py  circuit_breaker.py  retry.py  validator.py
harness/schemas/: __init__.py  base.py  invariants.py  validator.py
harness/utils/: __init__.py  exceptions.py
harness/workflow/: __init__.py
observability/: docker-compose.yml  prometheus.yml
observability/grafana/dashboards/: agent-harness-overview.json
observability/grafana/provisioning/dashboards/: dashboards.yaml
observability/grafana/provisioning/datasources/: datasources.yaml
observability/otel/: config.yaml
observability/tempo/: config.yaml
telemetry/: __init__.py  enhanced_metrics.py  metrics.py  tracing.py
tests/: test_base.py  test_feedback.py  test_reliability.py  test_schemas.py
