[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-harness"
version = "0.2.0"
description = "Reusable reliability layer for production AI agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Agent Harness Team"},
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "structlog>=23.0",
    "tenacity>=8.2",
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "aiohttp>=3.9",  # For async HTTP and health checks
    "asyncio-mqtt>=0.13",  # Optional for MQTT-based alerting
    "fastapi>=0.104",  # Web UI framework
    "uvicorn>=0.24",  # ASGI server
    "jinja2>=3.1",  # Templates
]

[project.optional-dependencies]
dev = [
    "mypy>=1.5",
    "ruff>=0.1",
]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "coverage>=7.3",
]

[tool.setuptools.packages.find]
include = ["harness*", "telemetry*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
